# ur5e-pick-and-place

./: .gitignore  README.md  deps.repos  requirements.txt
.github/workflows/: ci.yml
rosdep/: python_deps.yaml
scripts/: rosdep.sh  rosdep_install.sh
src/ur5e_bringup/: package.xml  setup.cfg  setup.py
src/ur5e_bringup/launch/: gz_bringup.launch.py  gz_moveit.launch.py  gz_sim.launch.py  moveit_mock.launch.py  pick_moveit.launch.py  vision_pick.launch.py
src/ur5e_bringup/worlds/: camera_world.sdf
src/ur5e_description/: CMakeLists.txt  package.xml
src/ur5e_description/config/: initial_positions.yaml  ros2_controllers.yaml
src/ur5e_description/scripts/: generate_urdf.sh
src/ur5e_description/urdf/: ur5e.ros2_control.xacro  ur5e.urdf.xacro
src/ur5e_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur5e_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  ur5e.srdf  ur5e.urdf.xacro
src/ur5e_moveit_config/launch/: demo.launch.py
src/ur5e_pick_and_place/: package.xml  setup.cfg  setup.py
src/ur5e_pick_and_place/scripts/: ik_test.py  smoke_test_sim.sh  validate_config.py  validate_launches.sh
src/ur5e_pick_and_place/test/: test_config_validation.py  test_frames.py  test_pick_scene.py
src/ur5e_pick_and_place/ur5e_pick_and_place/: config_validation.py  go_home.py  gripper_client.py  pick_and_place.py  pick_and_place_moveit.py  urdf_paths.py  vision_pick.py  vision_pick_moveit.py
ur5e_ws/: ik_test.py  semantic.txt  ur5e_full.urdf
ur5e_ws/src/ros2_robotiq_gripper/robotiq_description/urdf/: 2f_85.ros2_control.xacro
ur5e_ws/src/ur5e_gazebo_demo/: package.xml  setup.cfg  setup.py
ur5e_ws/src/ur5e_gazebo_demo/config/: controllers.yaml  home_positions.yaml  pick_targets.yaml
ur5e_ws/src/ur5e_gazebo_demo/launch/: pick_moveit.launch.py  run_pick.launch.py  ur5e_gazebo.launch.py  ur5e_sim.launch.py  vision_pick.launch.py
ur5e_ws/src/ur5e_gazebo_demo/scripts/: ik_test.py  smoke_test_sim.sh  validate_config.py  validate_launches.sh
ur5e_ws/src/ur5e_gazebo_demo/test/: test_config_validation.py  test_frames.py  test_pick_scene.py
ur5e_ws/src/ur5e_gazebo_demo/ur5e_gazebo_demo/: config_validation.py  frames.py  go_home.py  pick_and_place.py  pick_and_place_moveit.py  urdf_paths.py  vision_pick.py  vision_pick_moveit.py
ur5e_ws/src/ur5e_gazebo_demo/urdf/: ur5e.urdf.xacro
ur5e_ws/src/ur5e_gazebo_demo/worlds/: camera_world.sdf
ur5e_ws/src/ur5e_moveit_config/: package.xml
ur5e_ws/src/ur5e_moveit_config/config/: moveit_controllers.yaml  ur5e.ros2_control.xacro  ur5e.srdf  ur5e.urdf.xacro
ur5e_ws/worlds/: camera_world.sdf
