<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5e_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for UR5e Gazebo simulation and MoveIt bringup</description>
  <maintainer email="shuai@todo.todo">shuai</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>ur5e_description</exec_depend>
  <exec_depend>ur5e_moveit_config</exec_depend>
  <exec_depend>ur5e_pick_and_place</exec_depend>
  <exec_depend>robotiq_description</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
